<resources>
    <string name="app_name">Look4Flight</string>
    <string name="btn_search">Suchen</string>
    <string name="from_date">Abflugdatum</string>
    <string name="to_date">Rückflugdatum</string>
    <string name="origin">Abflug</string>
    <string name="destination">Ziel</string>
    <string name="mAC_origin">Abflughafen</string>
    <string name="finden">Finden...</string>

    <string-array name="zaehler">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
</resources>
